feat: :sparkles: create first documentation
