# backendCrackathoners/routes/api.php
@@ -3,5 +3,5 @@
 use App\Http\Controllers\StreetMarketController;
 use Illuminate\Support\Facades\Route;
 
-Route::apiResource('street_market', StreetMarketController::class)->only(['index', 'show']);
+Route::apiResource('street_market', StreetMarketController::class)->only(['index', 'show', 'store']);
 Route::post('/street_market/import', [StreetMarketController::class, 'importData']);
